k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-node
  namespace: kanbista
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-node
  template:
    metadata:
      labels:
        app: hello-node
    spec:
      imagePullSecrets:
        - name: artifact-registry-pull
      containers:
        - name: hello-node
          image: "us-central1-docker.pkg.dev/kambista-477721/kanbista-apptest5/hello-node:v1"
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
