k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-node
  namespace: kanbista
spec:
  type: NodePort
  selector:
    app: hello-node
  ports:
    - port: 80
      targetPort: 3000
